--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  lint:
+  integration-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -22,5 +22,19 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Run unit tests
+      - name: Generate prisma client
+        run: npx prisma generate --schema=./src/prisma/schema.prisma
+
+      - name: Run integration tests
         run: npm run test:integration
+        env:
+          DATABASE_URL: 'no-data'
+          SMTP_HOST: 'no-data'
+          SMTP_USERNAME: 'no-data'
+          SMTP_PASSWORD: 'no-data'
+          BACK_BASE_URL: 'no-data'
+          WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
+          WEATHER_CACHE_TTL: 900000
+          DAILY_FORECAST_CACHE_TTL: 1800000
+          HOURLY_FORECAST_CACHE_TTL: 1800000
+          WEATHER_BASE_URL: ${{ secrets.WEATHER_BASE_URL }}
