--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  lint:
+  unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -21,6 +21,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+
+      - name: Generate prisma client
+        run: npx prisma generate --schema=./src/prisma/schema.prisma
 
       - name: Run unit tests
         run: npm run test
