--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,11 @@ SMTP_PASSWORD=
 BACK_BASE_URL=
 
 WEATHER_API_KEY=
+WEATHER_BASE_URL=
+
+OPEN_WEATHER_API_KEY=
+OPEN_WEATHER_BASE_URL=
+
 WEATHER_CACHE_TTL=
 DAILY_FORECAST_CACHE_TTL=
 HOURLY_FORECAST_CACHE_TTL=
-WEATHER_BASE_URL=
