--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,10 @@ SMTP_USERNAME=
 SMTP_PASSWORD=
 
 BACK_BASE_URL=
+PORT=
 
 WEATHER_API_KEY=
-WEATHER_BASE_URL=
+WEATHER_API_BASE_URL=
 
 OPEN_WEATHER_API_KEY=
 OPEN_WEATHER_BASE_URL=
