--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
     "class-validator": "^0.14.2",
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
+    "nest-winston": "^1.10.2",
     "nodemailer": "^7.0.3",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
