--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -34,7 +34,9 @@ jobs:
           SMTP_PASSWORD: 'no-data'
           BACK_BASE_URL: 'no-data'
           WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
+          OPEN_WEATHER_API_KEY: ${{ secrets.OPEN_WEATHER_API_KEY }}
           WEATHER_CACHE_TTL: 900000
           DAILY_FORECAST_CACHE_TTL: 1800000
           HOURLY_FORECAST_CACHE_TTL: 1800000
-          WEATHER_BASE_URL: ${{ secrets.WEATHER_BASE_URL }}
+          WEATHER_API_BASE_URL: ${{ secrets.WEATHER_API_BASE_URL }}
+          OPEN_WEATHER_BASE_URL: ${{ secrets.OPEN_WEATHER_BASE_URL }}
