--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "test:integration": "jest --config ./test/integration/jest.integration.json",
+    "pretest:integration": "docker compose -f docker-compose.test.yaml up -d postgres && dotenv -e .env.test -- npx prisma migrate deploy --schema=./src/prisma",
+    "test:integration": "dotenv -e .env.test -- jest --config ./test/integration/jest.integration.json",
+    "posttest:integration": "docker compose -f docker-compose.test.yaml down -v postgres",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "npm run build && playwright test -c test/e2e/playwright.config.ts",
+    "pretest:e2e": "docker compose -f docker-compose.test.yaml up -d && ./wait.sh",
+    "test:e2e": "playwright test -c test/e2e/playwright.config.ts",
+    "posttest:e2e": "docker compose -f docker-compose.test.yaml down -v",
     "prisma:migrate:deploy": "prisma migrate deploy --schema=./src/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma"
   },
@@ -38,6 +42,7 @@
     "cache-manager": "^7.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv-cli": "^8.0.0",
     "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "nest-winston": "^1.10.2",
