--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma"
   },
   "dependencies": {
+    "@keyv/redis": "^4.4.1",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/cache-manager": "^3.0.1",
