--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "4.0",
     "@prisma/client": "^6.4.1",
+    "@willsoto/nestjs-prometheus": "^6.0.2",
     "axios": "^1.10.0",
     "cache-manager": "^7.0.0",
     "class-transformer": "^0.5.1",
@@ -48,6 +49,7 @@
     "joi": "^17.13.3",
     "nest-winston": "^1.10.2",
     "nodemailer": "^7.0.3",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "winston": "^3.17.0"
