Add integration test for cache

--- a/.env.test
+++ b/.env.test
@@ -8,7 +8,7 @@ SMTP_PASSWORD=test_password
 BACK_BASE_URL=http://127.0.0.1:3000
 PORT=3000
 
-REDIS_HOST=http://127.0.0.1
+REDIS_HOST=redis://127.0.0.1
 REDIS_PORT=6379
 
 WEATHER_API_KEY=test_api_key
