--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "pretest:integration": "docker compose -f docker-compose.test.yaml up -d postgres && dotenv -e .env.test -- npx prisma migrate deploy --schema=./src/prisma",
+    "pretest:integration": "docker compose -f docker-compose.test.yaml up -d postgres redis && dotenv -e .env.test -- npx prisma migrate deploy --schema=./src/prisma",
     "test:integration": "dotenv -e .env.test -- jest --config ./test/integration/jest.integration.json",
-    "posttest:integration": "docker compose -f docker-compose.test.yaml down -v postgres",
+    "posttest:integration": "docker compose -f docker-compose.test.yaml down -v postgres redis",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
