--- a/package.json
+++ b/package.json
@@ -28,10 +28,8 @@
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma"
   },
   "dependencies": {
-    "@keyv/redis": "^4.4.1",
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
-    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
@@ -42,7 +40,6 @@
     "@prisma/client": "^6.4.1",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "axios": "^1.10.0",
-    "cache-manager": "^7.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv-cli": "^8.0.0",
@@ -71,6 +68,7 @@
     "dependency-cruiser": "^16.10.3",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.4.1",
