--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/common/common": [
+      "@app/common": [
         "libs/common/src"
       ],
-      "@app/common/common/*": [
+      "@app/common/*": [
         "libs/common/src/*"
       ]
     }
