--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma"
   },
   "dependencies": {
-    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@keyv/redis": "^4.6.0",
+    "@nestjs/cache-manager": "^3.0.1",
+    "cache-manager": "^7.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "4.0",
@@ -47,10 +49,8 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv-cli": "^8.0.0",
-    "handlebars": "^4.7.8",
     "joi": "^17.13.3",
     "nest-winston": "^1.10.2",
-    "nodemailer": "^7.0.3",
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -65,7 +65,6 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
-    "@types/nodemailer": "^6.4.17",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
