--- a/apps/notifications/Dockerfile
+++ b/apps/notifications/Dockerfile
@@ -8,7 +8,7 @@ COPY --chown=node:node package*.json ./
 COPY --chown=node:node tsconfig.json tsconfig.json
 COPY --chown=node:node nest-cli.json nest-cli.json
 
-COPY --chown=node:node apps/weather apps/weather
+COPY --chown=node:node apps/notifications apps/notifications
 COPY --chown=node:node libs libs
 
 RUN npm ci
@@ -21,7 +21,7 @@ COPY --chown=node:node package*.json ./
 
 COPY --chown=node:node --from=development /usr/src/app/node_modules ./node_modules
 
-COPY --chown=node:node apps/weather apps/weather
+COPY --chown=node:node apps/notifications apps/notifications
 COPY --chown=node:node libs libs
 
 RUN npm run build
@@ -32,7 +32,7 @@ USER node
 
 FROM node:22-alpine AS production
 
-COPY --chown=node:node --from=build /usr/src/app/apps/weather/node_modules ./node_modules
+COPY --chown=node:node --from=build /usr/src/app/apps/notifications/node_modules ./node_modules
 COPY --chown=node:node --from=build /usr/src/app/dist ./dist
 COPY --chown=node:node --from=build /usr/src/app/entrypoint.sh ./
 
