--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,9 +11,21 @@ services:
       - "3001:3001"
     env_file:
       - ./apps/weather/.env
-    command: sh -c "NODE_PATH=/usr/src/app/apps/weather/node_modules npm run start weather"
+    command: npm run start weather
     depends_on:
       - redis
+
+  notifications:
+    build:
+      context: .
+      dockerfile: ./apps/notifications/Dockerfile
+      target: development
+    restart: always
+    ports:
+      - "3002:3002"
+    env_file:
+      - ./apps/notifications/.env
+    command: npm run start -- notifications
 
 #  api:
 #    build:
