Connect notification with subscription microservice

--- a/apps/subscriptions/.env.example
+++ b/apps/subscriptions/.env.example
@@ -7,3 +7,6 @@ WEATHER_API_BASE_URL=
 
 OPEN_WEATHER_API_KEY=
 OPEN_WEATHER_BASE_URL=
+
+NOTIFICATIONS_URL=http://notifications:3002
+WEATHER_URL=http://weather:3001
