--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,8 @@ services:
       - ./apps/weather/.env
     command: npm run start weather
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
 
   notifications:
     build:
@@ -37,22 +38,14 @@ services:
       - "3000:3000"
     env_file:
       - ./apps/subscriptions/.env
-    command: npm run start subscriptions
-
-#  api:
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#      target: development
-#    restart: always
-#    ports:
-#      - "3000:3000"
-#    env_file:
-#      - .env
-#    command: ["sh", "-c", "npx prisma generate --schema=src/prisma/schema.prisma && npx prisma migrate deploy --schema=src/prisma/schema.prisma && npm run start:dev"]
-#    depends_on:
-#      - postgres
-#      - redis
+    command: ["sh", "-c", "npx prisma generate --schema=apps/subscriptions/src/prisma && npx prisma migrate deploy --schema=apps/subscriptions/src/prisma && npm run start subscriptions"]
+    depends_on:
+      postgres:
+        condition: service_healthy
+      notifications:
+        condition: service_started
+      weather:
+        condition: service_started
 
   postgres:
     image: postgres:latest
@@ -65,6 +58,12 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     restart: always
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
 
   redis:
     image: redis
@@ -72,6 +71,11 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+    healthcheck:
+      test: [ "CMD", "redis-cli", "ping" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
