--- a/.env.test
+++ b/.env.test
@@ -5,8 +5,7 @@ SMTP_PORT=1025
 SMTP_USERNAME=test@example.com
 SMTP_PASSWORD=test_password
 
-BACK_BASE_URL=http://127.0.0.1:3000
-PORT=3000
+BACK_BASE_URL=http://127.0.0.1:3003
 
 REDIS_HOST=redis://127.0.0.1
 REDIS_PORT=6379
@@ -20,3 +19,9 @@ OPEN_WEATHER_BASE_URL=http://mock-server:1080
 WEATHER_CACHE_TTL=900000
 DAILY_FORECAST_CACHE_TTL=1800000
 HOURLY_FORECAST_CACHE_TTL=1800000
+
+NOTIFICATIONS_URL=http://notifications:3002/api
+SUBSCRIPTION_URL=http://subscriptions:3000/api
+WEATHER_URL=http://weather:3004/api
+
+BATCH_SIZE=5000
