--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:prod": "node dist/apps/weather-api-subscription/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
-    "pretest:integration": "docker compose -f docker-compose.test.yaml up -d postgres redis && dotenv -e .env.test -- npx prisma migrate deploy --schema=./src/prisma",
+    "pretest:integration": "docker compose -f docker-compose.test.yaml up -d postgres redis && dotenv -e .env.test -- npx prisma migrate deploy --schema=apps/subscriptions/src/prisma",
     "test:integration": "dotenv -e .env.test -- jest --config ./test/integration/jest.integration.json",
     "posttest:integration": "docker compose -f docker-compose.test.yaml down -v postgres redis",
     "test:watch": "jest --watch",
@@ -27,7 +27,7 @@
     "pretest:e2e": "docker compose -f docker-compose.test.yaml up -d && ./wait.sh",
     "test:e2e": "playwright apps/weather-api-subscription/test -c test/e2e/playwright.config.ts",
     "posttest:e2e": "docker compose -f docker-compose.test.yaml down -v",
-    "test:arch": "npx depcruise -c test/architecture/.dependency-cruiser.js src",
+    "test:arch": "npx depcruise -c test/architecture/.dependency-cruiser.js apps",
     "prisma:migrate:deploy": "prisma migrate deploy --schema=./src/prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma"
   },
