--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/mapped-types": "*",
     "@keyv/redis": "^4.6.0",
     "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/serve-static": "4.0",
     "cache-manager": "^7.0.1",
     "@nestjs/platform-express": "^10.0.0",
     "@willsoto/nestjs-prometheus": "^6.0.2",
