--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "pretest:e2e": "docker compose -f docker-compose.test.yaml up -d && ./wait.sh",
-    "test:e2e": "playwright apps/weather-api-subscription/test -c test/e2e/playwright.config.ts",
+    "test:e2e": "playwright test -c test/e2e/playwright.config.ts",
     "posttest:e2e": "docker compose -f docker-compose.test.yaml down -v",
     "test:arch": "npx depcruise -c test/architecture/.dependency-cruiser.js apps",
     "prisma:migrate:deploy": "prisma migrate deploy --schema=./src/prisma/schema.prisma",
