--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,7 @@
 DATABASE_URL="postgresql://postgres:1111@localhost:5433/weather?schema=public"
 
+PORT=3000
+
 SMTP_HOST=mailhog
 SMTP_PORT=1025
 SMTP_USERNAME=test@example.com
@@ -22,6 +24,6 @@ HOURLY_FORECAST_CACHE_TTL=1800000
 
 NOTIFICATIONS_URL=http://notifications:3002/api
 SUBSCRIPTION_URL=http://subscriptions:3000/api
-WEATHER_URL=http://weather:3004/api
+WEATHER_URL=http://weather:3001/api
 
 BATCH_SIZE=5000
