--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm ci
 
       - name: Generate prisma client
-        run: npx prisma generate --schema=./src/prisma/schema.prisma
+        run: npx prisma generate --schema=./apps/subscriptions/src/prisma
 
       - name: Run unit tests
         run: npm run test
