Implement gRPC communication between subscriptions and notifications

--- a/apps/subscriptions/.env.example
+++ b/apps/subscriptions/.env.example
@@ -11,4 +11,6 @@ OPEN_WEATHER_BASE_URL=
 NOTIFICATIONS_URL=http://notifications:3002
 WEATHER_URL=http://weather:3001
 
+NOTIFICATIONS_GRPC_URL=notifications:3002
+
 BATCH_SIZE=5000
