--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   ],
   "scripts": {
     "build": "nest build",
+    "postbuild": "mkdir -p dist/libs/common/src/proto & cp libs/common/src/proto/**/*.proto dist/libs/common/src/proto",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+    "prestart": "mkdir -p dist/libs/common/src/proto & cp libs/common/src/proto/**/*.proto dist/libs/common/src/proto",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/weather-api-subscription/main",
+    "generate-proto": "protoc --plugin=protoc-gen-ts_proto=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=. ./libs/common/src/proto/**/*.proto  --ts_proto_opt=nestJs=true",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "pretest:integration": "docker compose -f docker-compose.test.yaml up -d postgres redis && dotenv -e .env.test -- npx prisma migrate deploy --schema=apps/subscriptions/src/prisma",
@@ -32,18 +35,21 @@
     "prisma:generate": "prisma generate --schema=./src/prisma/schema.prisma"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.13.4",
+    "@grpc/proto-loader": "^0.7.15",
+    "@keyv/redis": "^4.6.0",
     "@nestjs/axios": "^4.0.0",
+    "@nestjs/cache-manager": "^3.0.1",
+    "@nestjs/microservices": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
-    "@keyv/redis": "^4.6.0",
-    "@nestjs/cache-manager": "^3.0.1",
-    "@nestjs/serve-static": "4.0",
-    "cache-manager": "^7.0.1",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "4.0",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "axios": "^1.10.0",
+    "cache-manager": "^7.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv-cli": "^8.0.0",
@@ -52,6 +58,7 @@
     "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "ts-proto": "^2.7.5",
     "winston": "^3.17.0"
   },
   "devDependencies": {
