--- a/apps/subscriptions/.env.example
+++ b/apps/subscriptions/.env.example
@@ -12,5 +12,6 @@ NOTIFICATIONS_URL=http://notifications:3002
 WEATHER_URL=http://weather:3001
 
 NOTIFICATIONS_GRPC_URL=notifications:3002
+WEATHER_GRPC_URL=weather:3001
 
 BATCH_SIZE=5000
