Add domain exceptions & fix gRPC exception mapping

--- a/apps/subscriptions/.env.example
+++ b/apps/subscriptions/.env.example
@@ -1,5 +1,7 @@
 PORT=3000
 
+GRPC_URL=0.0.0.0:3000
+
 DATABASE_URL="postgresql://postgres:test@localhost:test/weather?schema=public"
 
 WEATHER_API_KEY=
