--- a/.env.test
+++ b/.env.test
@@ -26,4 +26,8 @@ NOTIFICATIONS_URL=http://notifications:3002/api
 SUBSCRIPTION_URL=http://subscriptions:3000/api
 WEATHER_URL=http://weather:3001/api
 
+NOTIFICATIONS_GRPC_URL=notifications:3002
+WEATHER_GRPC_URL=weather:3001
+SUBSCRIPTIONS_GRPC_URL=subscriptions:3000
+
 BATCH_SIZE=5000
