Add EventBus abstraction and rabbitmq implementation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,9 @@ services:
     env_file:
       - ./apps/notifications/.env
     command: npm run start notifications
+    depends_on:
+      rabbitmq:
+        condition: service_started
 
   subscriptions:
     build:
@@ -45,6 +48,8 @@ services:
       notifications:
         condition: service_started
       weather:
+        condition: service_started
+      rabbitmq:
         condition: service_started
 
   gateway:
@@ -81,7 +86,6 @@ services:
       timeout: 5s
       retries: 5
 
-
   redis:
     image: redis
     ports:
@@ -94,6 +98,19 @@ services:
       timeout: 5s
       retries: 5
 
+  rabbitmq:
+    image: rabbitmq:4-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    volumes:
+      - rabbitmq_data:/data
+
 volumes:
   postgres_data:
   redis_data:
+  rabbitmq_data:
