--- a/apps/subscriptions/.env.example
+++ b/apps/subscriptions/.env.example
@@ -4,6 +4,8 @@ GRPC_URL=0.0.0.0:3000
 
 DATABASE_URL="postgresql://postgres:test@localhost:test/weather?schema=public"
 
+RABBITMQ_URL=amqp://rabbitmq:5672
+
 WEATHER_API_KEY=
 WEATHER_API_BASE_URL=
 
