--- a/package.json
+++ b/package.json
@@ -40,14 +40,15 @@
     "@keyv/redis": "^4.6.0",
     "@nestjs/axios": "^4.0.0",
     "@nestjs/cache-manager": "^3.0.1",
-    "@nestjs/microservices": "^10.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "4.0",
     "@willsoto/nestjs-prometheus": "^6.0.2",
+    "amqplib": "^0.10.8",
     "axios": "^1.10.0",
     "cache-manager": "^7.0.1",
     "class-transformer": "^0.5.1",
@@ -67,6 +68,7 @@
     "@nestjs/testing": "^10.4.17",
     "@playwright/test": "^1.53.1",
     "@testcontainers/postgresql": "^11.0.3",
+    "@types/amqplib": "^0.10.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
