--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,7 @@
 DATABASE_URL="postgresql://postgres:1111@localhost:5433/weather?schema=public"
 
+RABBITMQ_URL=amqp://rabbitmq:5672
+
 PORT=3000
 
 SMTP_HOST=mailhog
