--- a/apps/gateway/Dockerfile
+++ b/apps/gateway/Dockerfile
@@ -1,38 +1,28 @@
-FROM node:22-alpine AS development
-
+FROM node:latest AS build
+RUN apt-get update && apt-get install -y --no-install-recommends dumb-init
 WORKDIR /usr/src/app
-
 COPY --chown=node:node package*.json ./
-
 RUN npm ci
+
+COPY --chown=node:node apps/gateway apps/gateway
+COPY --chown=node:node libs libs
 
 COPY --chown=node:node tsconfig.json tsconfig.json
 COPY --chown=node:node nest-cli.json nest-cli.json
 
-COPY --chown=node:node apps/gateway apps/gateway
-COPY --chown=node:node libs libs
+RUN npm run build gateway
+RUN npm run copy:proto
 
-FROM node:22-alpine AS build
+FROM node:22.17-bullseye-slim
 
+ENV NODE_ENV=production
+COPY --chown=node:node --from=build /usr/bin/dumb-init /usr/bin/dumb-init
+USER node
 WORKDIR /usr/src/app
-
 COPY --chown=node:node package*.json ./
+RUN npm ci --omit=dev
+COPY --chown=node:node --from=build /usr/src/app/dist/apps/gateway /usr/src/app/dist/apps/gateway
+COPY --chown=node:node --from=build /usr/src/app/dist/libs /usr/src/app/dist/libs
 
-COPY --chown=node:node --from=development /usr/src/app/node_modules ./node_modules
-
-COPY --chown=node:node apps/gateway apps/gateway
-COPY --chown=node:node libs libs
-
-RUN npm run build
-
-RUN npm ci --only=production && npm cache clean --force
-
-USER node
-
-FROM node:22-alpine AS production
-
-COPY --chown=node:node --from=build /usr/src/app/apps/gateway/node_modules ./node_modules
-COPY --chown=node:node --from=build /usr/src/app/dist ./dist
-COPY --chown=node:node --from=build /usr/src/app/entrypoint.sh ./
-
-USER node
+ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+CMD ["node", "dist/apps/gateway/main.js"]
