Update docker-compose file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,13 +5,11 @@ services:
     build:
       context: .
       dockerfile: ./apps/weather/Dockerfile
-      target: development
     restart: always
     ports:
       - "3001:3001"
     env_file:
       - ./apps/weather/.env
-    command: npm run start weather
     depends_on:
       redis:
         condition: service_healthy
@@ -20,28 +18,25 @@ services:
     build:
       context: .
       dockerfile: ./apps/notifications/Dockerfile
-      target: development
     restart: always
     ports:
       - "3002:3002"
     env_file:
       - ./apps/notifications/.env
-    command: npm run start notifications
     depends_on:
       rabbitmq:
-        condition: service_started
+        condition: service_healthy
 
   subscriptions:
     build:
       context: .
       dockerfile: ./apps/subscriptions/Dockerfile
-      target: development
     restart: always
     ports:
       - "3000:3000"
     env_file:
       - ./apps/subscriptions/.env
-    command: ["sh", "-c", "npx prisma generate --schema=apps/subscriptions/src/prisma && npx prisma migrate deploy --schema=apps/subscriptions/src/prisma && npm run start subscriptions"]
+    command: ["sh", "-c", "npx prisma migrate deploy && npx prisma generate && node dist/apps/subscriptions/main.js"]
     depends_on:
       postgres:
         condition: service_healthy
@@ -50,19 +45,17 @@ services:
       weather:
         condition: service_started
       rabbitmq:
-        condition: service_started
+        condition: service_healthy
 
   gateway:
     build:
       context: .
       dockerfile: ./apps/gateway/Dockerfile
-      target: development
     restart: always
     ports:
       - "3003:3003"
     env_file:
       - ./apps/gateway/.env
-    command: npm run start gateway
     depends_on:
       subscriptions:
         condition: service_started
@@ -109,6 +102,11 @@ services:
       RABBITMQ_DEFAULT_PASS: guest
     volumes:
       - rabbitmq_data:/data
+    healthcheck:
+      test: [ "CMD", "rabbitmq-diagnostics", "-q", "ping" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
